--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,13 +13,21 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
+  redis_cache:
+    image: redis:6
+    container_name: redis_cache
+    ports:
+      - "6379:6379"
+
   flask_backend:
     build: ./backend
     container_name: flask_backend
     depends_on:
       - postgres_db
+      - redis_cache
     environment:
       - DATABASE_URL=postgresql://postgres:postgres@postgres_db:5432/mydatabase
+      - REDIS_URL=redis://redis_cache:6379/0
     ports:
       - "5000:5000"
     restart: always
@@ -36,4 +44,3 @@ services:
 
 volumes:
   postgres_data:
-
